--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==4.2.6
 numpy==1.26.1
 packaging==23.2
 pandas==2.1.1
+Pillow==10.1.0
 plotly==5.17.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
