--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
+crispy-bootstrap5==0.7
 Django==4.2.6
+django-crispy-forms==2.1
 django-tinymce==3.6.1
 numpy==1.26.1
 packaging==23.2
